Added link to Red Hat doco

--- a/base/pull-secret.yaml
+++ b/base/pull-secret.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: rhaiis-demo
 type: kubernetes.io/podmanconfigjson
 data:
-  config.json: <your podman config secret>
+  config.json: <your podman config secret. https://access.redhat.com/articles/RegistryAuthentication>
