--- a/base/pull-secret.yaml
+++ b/base/pull-secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 metadata:
   name: pull-secret
   namespace: rhaiis-demo
+# Adjust the type based on if your pull secret is docker or podman. See doco for details
 type: kubernetes.io/podmanconfigjson
 data:
   config.json: <your podman config secret. https://access.redhat.com/articles/RegistryAuthentication>
